WAF.tf
resource "aws_wafv2_web_acl" "alb_waf" {
  name        = "alb-waf-${var.env}"
  description = "WAF for ALB"
  scope       = "REGIONAL"

  default_action {
    allow {}
  }

  rule {
    name     = "AWSManagedRulesCommonRuleSet"
    priority = 1

    override_action {
      none {}
    }

    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesCommonRuleSet"
        vendor_name = "AWS"
      }
    }

    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "AWSCommonRules"
      sampled_requests_enabled   = true
    }
  }

  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "AlbWAF"
    sampled_requests_enabled   = true
  }

  tags = merge(local.common_tags, {
    Name = "ALB-WAF"
  })
}

resource "aws_wafv2_web_acl_association" "alb_waf_assoc" {
  resource_arn = aws_lb.ALB.arn
  web_acl_arn  = aws_wafv2_web_acl.alb_waf.arn
}
